Changed text size on mobile, made the compare drawer buttons fixed position.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -63,3 +63,7 @@
   caret-color: $warning-color !important;
 }
 
+.fos-uppercase-credential-title{
+  text-transform: uppercase;
+  font-size: 12px !important;
+}
